Upd: addressed PR comments

--- a/frontend/html/public/index.html
+++ b/frontend/html/public/index.html
@@ -1,6 +1,6 @@
 <!--
-    This file is an example of client side implementaion of the firebase API.
--->>
+    This file is an example of client side implementation of the firebase API.
+-->
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
